--- a/odin-recipes/pap.html
+++ b/odin-recipes/pap.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin's Recipes</title>
+    <title>Pap Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    
+    <h1>Pap Recipes</h1>
 </body>
 </html>
