--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <ul>
+        <li> <a href="odin-recipes/pap.html">Pap</a></li>
+        <li> <a href="odin-recipes/skopo-nkomo.html">Skopo (cow head)</a></li>
+        <li> <a href="odin-recipes/salsa.html">Salsa</a></li>
+        <li> <a href="odin-recipes/magwinya.html">Mangwinya</a></li>
+    </ul>
 </body>
 </html>
