--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li> <a href="odin-recipes/pap.html">Pap</a></li>
-        <li> <a href="odin-recipes/skopo-nkomo.html">Skopo (cow head)</a></li>
-        <li> <a href="odin-recipes/salsa.html">Salsa</a></li>
-        <li> <a href="odin-recipes/magwinya.html">Mangwinya</a></li>
+        <li> <a href="recipes/pap.html">Pap</a></li>
+        <li> <a href="recipes/skopo-nkomo.html">Skopo (cow head)</a></li>
+        <li> <a href="recipes/salsa.html">Salsa</a></li>
+        <li> <a href="recipes/magwinya.html">Mangwinya</a></li>
     </ul>
 </body>
 </html>
